[Bash/Batch] Add common scripts to run Java with JVM options being adjusted depending on the JDK version used.